--- a/docker_almalinux/Vagrantfile
+++ b/docker_almalinux/Vagrantfile
@@ -15,6 +15,10 @@ Vagrant.configure("2") do |config|
       vb.gui = true
       vb.memory = "4094"
       vb.cpus = "4"
+      vb.customize ["modifyvm", :id, "--paravirtprovider", "kvm"]
+      vb.customize ["modifyvm", :id, "--chipset", "ich9"]
+      vb.customize ["modifyvm", :id, "--vram", "128"]
+      vb.customize ["modifyvm", :id, "--graphicscontroller", "vboxvga"]
     end
 
     config.vm.provision "shell", :path => "scripts/init.sh"
