--- a/hyper-v/docker_almalinux/Vagrantfile
+++ b/hyper-v/docker_almalinux/Vagrantfile
@@ -3,7 +3,7 @@
 
 Vagrant.configure("2") do |config|
     config.vm.box = "almalinux/8"
-    config.vagrant.plugins = ["vagrant-vbguest", "vagrant-reload"] #, "vagrant-hostmanager"]
+    config.vagrant.plugins = ["vagrant-vbguest", "vagrant-reload", "vagrant-reload"] #, "vagrant-hostmanager"]
     #config.hostmanager.enabled = true
     #config.hostmanager.manage_guest = true
     config.vbguest.auto_update = false 
