--- a/hyper-v/docker_almalinux/Vagrantfile
+++ b/hyper-v/docker_almalinux/Vagrantfile
@@ -3,9 +3,7 @@
 
 Vagrant.configure("2") do |config|
     config.vm.box = "almalinux/8"
-    config.vagrant.plugins = ["vagrant-vbguest", "vagrant-reload", "vagrant-reload"] #, "vagrant-hostmanager"]
-    #config.hostmanager.enabled = true
-    #config.hostmanager.manage_guest = true
+    config.vagrant.plugins = ["vagrant-vbguest", "vagrant-reload", "vagrant-reload"]
     config.vbguest.auto_update = false 
     config.vm.synced_folder ".", "/vagrant", type: "smb", smb_username: "smb", smb_password: "LABtest01!"
     
@@ -20,7 +18,7 @@ Vagrant.configure("2") do |config|
 
     config.vm.provision "shell", :path => "scripts/init.sh"
     config.vm.provision "shell", :path => "scripts/docker.sh"
-    config.vm.provision "shell", :path => "scripts/hyperv_network.sh"
+    config.vm.provision "shell", inline: "nmcli connection modify eth0 ipv4.method manual ipv4.addresses 192.168.0.10/24 ipv4.gateway 192.168.0.1 connection.autoconnect yes"
     config.vm.provision "reload"
 end
   
